--- a/src/docs/asciidoc/comment-api.adoc
+++ b/src/docs/asciidoc/comment-api.adoc
@@ -1,97 +1,89 @@
-= 댓글 API
-:doctype: book
-:icons: font
-:source-highlighter: highlightjs
+= 댓글 API 문서
 :toc: left
 :toclevels: 2
-:sectlinks:
+:source-highlighter: highlightjs
 
-=== 댓글 생성 API
+== 댓글 생성 API
 
-====
-테스트 실행 시 생성된 HTTP 요청/응답과 필드 정보가 포함됩니다.
-====
+=== 요청 예시
+include::{snippets}/comment-create/http-request.adoc[]
 
-operation::comment-create[snippets='http-request,http-response,request-fields,response-fields']
+=== 요청 필드
+include::{snippets}/comment-create/request-fields.adoc[]
 
-==== Curl 요청 예시
+=== 응답 예시
+include::{snippets}/comment-create/http-response.adoc[]
 
-[source,shell]
-----
-include::{snippets}/comment-create/curl-request.adoc[]
-----
+=== 응답 필드
+include::{snippets}/comment-create/response-fields.adoc[]
 
-=== 댓글 삭제 API
+---
 
-====
-테스트 실행 시 생성된 HTTP 요청/응답과 경로 파라미터 정보가 포함됩니다.
-====
+== 댓글 삭제 API
 
-operation::comment-delete[snippets='http-request,http-response,path-parameters']
+=== 요청 예시
+include::{snippets}/comment-delete/http-request.adoc[]
 
-==== Curl 요청 예시
+=== Path 파라미터
+include::{snippets}/comment-delete/path-parameters.adoc[]
 
-[source,shell]
-----
-include::{snippets}/comment-delete/curl-request.adoc[]
-----
+=== 응답 예시
+include::{snippets}/comment-delete/http-response.adoc[]
 
-=== 댓글 수정 API
+---
 
-====
-테스트 실행 시 생성된 HTTP 요청/응답, 경로 파라미터 및 요청 필드 정보가 포함됩니다.
-====
+== 댓글 수정 API
 
-operation::comment-update[snippets='http-request,http-response,path-parameters,request-fields,response-fields']
+=== 요청 예시
+include::{snippets}/comment-update/http-request.adoc[]
 
-==== Curl 요청 예시
+=== Path 파라미터
+include::{snippets}/comment-update/path-parameters.adoc[]
 
-[source,shell]
-----
-include::{snippets}/comment-update/curl-request.adoc[]
-----
+=== 요청 필드
+include::{snippets}/comment-update/request-fields.adoc[]
 
-=== 댓글 좋아요 API
+=== 응답 예시
+include::{snippets}/comment-update/http-response.adoc[]
 
-====
-테스트 실행 시 생성된 HTTP 요청/응답과 경로 파라미터 정보가 포함됩니다.
-====
+=== 응답 필드
+include::{snippets}/comment-update/response-fields.adoc[]
 
-operation::comment-like[snippets='http-request,http-response,path-parameters']
+---
 
-==== Curl 요청 예시
+== 댓글 좋아요 API
 
-[source,shell]
-----
-include::{snippets}/comment-like/curl-request.adoc[]
-----
+=== 요청 예시
+include::{snippets}/comment-like/http-request.adoc[]
 
-=== 댓글 좋아요 취소 API
+=== Path 파라미터
+include::{snippets}/comment-like/path-parameters.adoc[]
 
-====
-테스트 실행 시 생성된 HTTP 요청/응답과 경로 파라미터 정보가 포함됩니다.
-====
+=== 응답 예시
+include::{snippets}/comment-like/http-response.adoc[]
 
-operation::comment-unlike[snippets='http-request,http-response,path-parameters']
+---
 
-==== Curl 요청 예시
+== 댓글 좋아요 취소 API
 
-[source,shell]
-----
-include::{snippets}/comment-unlike/curl-request.adoc[]
-----
+=== 요청 예시
+include::{snippets}/comment-unlike/http-request.adoc[]
 
-=== 댓글 목록 조회 API
+=== Path 파라미터
+include::{snippets}/comment-unlike/path-parameters.adoc[]
 
-====
-테스트 실행 시 생성된 HTTP 요청/응답 및 쿼리 파라미터 정보가 포함됩니다.
-====
+=== 응답 예시
+include::{snippets}/comment-unlike/http-response.adoc[]
 
-operation::comment-list[snippets='http-request,http-response,request-parameters']
+---
 
-==== Curl 요청 예시
+== 댓글 목록 조회 API
 
-[source,shell]
-----
-include::{snippets}/comment-list/curl-request.adoc[]
-----
+=== 요청 예시
+include::{snippets}/comment-list/http-request.adoc[]
+
+=== 요청 파라미터
+include::{snippets}/comment-list/request-parameters.adoc[]
+
+=== 응답 예시
+include::{snippets}/comment-list/http-response.adoc[]
