Spring REST Docs Api 문서 작성 자동화 Adoc 문서 링크 리스트를 index.adoc에 자동추가. 중복 그레들 제거

--- a/src/docs/asciidoc/admin-api.adoc
+++ b/src/docs/asciidoc/admin-api.adoc
@@ -1,4 +1,14 @@
-== 관리자 로그인
+= 관리자 로그인 API
+:doctype: book
+:source-highlighter: highlightjs
+:toc: left
+:toclevels: 2
+:seclinks:
+
+== Table of Contents
+* 1. 관리자 로그인
+
+== 1. 관리자 로그인
 
 === 요청
 
