--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -4,14 +4,22 @@
 
 == 문서 목록
 
-* xref:comment-api.html[Comment API 문서]
-* xref:etf-api.html[ETF API 문서]
-* xref:other-api.html[기타 API 문서]
+* xref:admin-api.html[admin-api.html API 문서]
+* xref:comment-api.html[comment-api.html API 문서]
+* xref:etf-api.html[etf-api.html API 문서]
+* xref:index.html[index.html API 문서]
+* xref:news-api.html[news-api.html API 문서]
+* xref:notification-api.html[notification-api.html API 문서]
+* xref:reply-api.html[reply-api.html API 문서]
+* xref:report-api.html[report-api.html API 문서]
+* xref:user-api.html[user-api.html API 문서]
+
 
 == 사용 방법
 
-이 페이지에서 각 API 문서 링크를 클릭하면 해당 HTML 문서로 이동합니다.
+http://localhost:8080/docs/index.html
+위 링크를 클릭하면 INDEX 문서로 이동합니다.
 
 == 문서 위치
 
-`src/main/resources/static/docs/` 디렉토리에 생성된 HTML 파일을 기준으로 링크를 설정했습니다.
+`src/main/resources/static/docs/` 기준입니다.
