로컬에서 RestDocs 잔상 재해결

--- a/src/docs/asciidoc/etf-api.adoc
+++ b/src/docs/asciidoc/etf-api.adoc
@@ -1,9 +1,9 @@
 = ETF API
 :doctype: book
+:source-highlighter: highlightjs
 :toc: left
-:snippets: {snippets}
-:revnumber: {revnumber}
-:revdate: {revdate}
+:toclevels: 2
+:seclinks:
 
 == 1. ETF 목록 조회 API
 
